# src/modules/auth/schemas/refresh.schema.ts
@@ -1,0 +1,7 @@
+import z from "zod";
+
+export const RefreshResponseSchema = z.object({
+  data: z.object({
+    accessToken: z.jwt(),
+  }),
+});
